src/objects/Group_Membership__c.object
<CustomObject>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <referenceTo>Tournament_Group__c</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Group_Memberships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <formula>(wins__c * 3) + ( ties__c  * 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <formula>Team__r.Team__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Team Participation</label>
        <referenceTo>Team_Participation__c</referenceTo>
        <relationshipLabel>Group Memberships</relationshipLabel>
        <relationshipName>Group_Memberships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>goal_differential__c</fullName>
        <formula>goals_favor__c -  goals_against__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>goal differential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>goals_against__c</fullName>
        <defaultValue>0</defaultValue>
        <label>goals_against</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>goals_favor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>goals_favor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>losses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>losses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ties__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wins__c</fullName>
        <defaultValue>0</defaultValue>
        <label>wins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Group Membership</label>
    <nameField>
        <displayFormat>GM-{0000}</displayFormat>
        <label>Group Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>